test/main/com/ocaml/sdk/output/errors/samples/unbound/type_constructor2.ml
type unknown += Foo
(*
Error: Unbound type constructor unknown
*)